WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
10981
Linux\GDK build fixes
https://bugs.webkit.org/show_bug.cgi?id=10981
Summary
Linux\GDK build fixes
Krzysztof Kowalczyk
Reported
2006-09-21 22:39:37 PDT
Attached patch makes necessary adjustements to linux\gdk code to make it build after recent changes.
Attachments
Linux\gdk build fixes
(6.04 KB, patch)
2006-09-21 22:40 PDT
,
Krzysztof Kowalczyk
mjs
: review+
Details
Formatted Diff
Diff
Updated build fixes
(22.96 KB, patch)
2006-10-03 02:30 PDT
,
Mark Rowe (bdash)
eric
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Krzysztof Kowalczyk
Comment 1
2006-09-21 22:40:07 PDT
Created
attachment 10699
[details]
Linux\gdk build fixes Linux\gdk build fixes
Maciej Stachowiak
Comment 2
2006-09-23 01:21:59 PDT
Comment on
attachment 10699
[details]
Linux\gdk build fixes r=me
Mark Rowe (bdash)
Comment 3
2006-10-02 18:38:53 PDT
This patch no longer applies cleanly after some recent changes to GraphicsContextCairo.cpp. Can you please refresh this patch against ToT? I will make an effort to land it as soon as possible after you do that.
Mark Rowe (bdash)
Comment 4
2006-10-03 02:30:33 PDT
Created
attachment 10877
[details]
Updated build fixes I've taken the liberty of updating the patch to cover all current build failures in the GDK port.
Eric Seidel (no email)
Comment 5
2006-10-03 02:36:15 PDT
Comment on
attachment 10877
[details]
Updated build fixes Assuming it all works, the changes look sane.
Mark Rowe (bdash)
Comment 6
2006-10-03 02:46:37 PDT
Landed in
r16733
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug